[package]
name = "mqtt_collect"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.19"
rumqttc = { version = "0.25.1", default-features = false, features = ["use-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls", "time"] }
once_cell = "1.19.0"
chrono = "0.4.38"
taos = { version = "*", default-features = false, features = ["ws"] }
anyhow = "1.0"
futures = "0.3"
md5 = "0.8.0"
redis = { version = "0.25.3", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.7.0", features = ["v4"] }
